# template-python-fastapi-apikey

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py
app/middleware/: auth.py
app/routers/: secure.py  template.py
docker/: Dockerfile
